# glastor-dev

./: .editorconfig  .eslintignore  .gitignore  .pre-commit-config.yaml  .readmegen.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT_GENERATOR.md  Cargo.toml  Dockerfile  EXAMPLES.md  IMPROVEMENTS.md  Justfile  LICENSE  README.docker.md  README.md  README.profile.md  ai.md  code_of_conduct.md  demo_copyright.py  deno.json  import_map.json  lefthook.yml  main.py  package-lock.json  package.json  perfil.md  preview.html  pyproject.toml  readme_preview.html  requirements.txt  security.md  support.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT .md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bench.yml  ci-checks.yml  ci.yml  codeql.yml  coverage-badge.yml  coverage.yml  docker-publish.yml  metrics.yml  pr-labeler.yml  publish-pypi.yml  publish-release.yml  readme-check.yml  readme-update.yml  release-binaries.yml  release.yml  rustdoc.yml  sonarqube.yml  stale.yml  update-readme.yml
bench/: template_and_sanitize_bench.ts
config/: template_schema.json  test_config.py  test_generator.py  test_renderer.py
modules/: generator.py  github_api.py  renderer.py
scripts/: banner.txt  generate_readme.py
src/: __init__.py  main.py  main.rs  main.ts  mod.ts
src/data/: profile.json
src/generators/: api.ts  badge_manager.py  badges.ts  examples.ts  readme_generator.py  toc.ts
src/parsers/: deno_json.ts  import_map.ts  imports.ts  project_files.ts  source_code.ts  source_code_ast.ts  tests.ts  workflows.ts
src/project/: analyze.ts
src/templates/: detailed.md  load.ts  minimal.md  render.ts
src/utils/: copyright_generator.py  date_utils.py  file_handler.py  file_system.ts  init_wizard.ts  logger.ts  readme_infer.ts  user_config.ts
target_cli/: .rustc_info.json
target_cli/debug/.fingerprint/anstream-c6d1b48292b10f57/: lib-anstream  lib-anstream.json
target_cli/debug/.fingerprint/anstyle-bb2201af83985289/: lib-anstyle  lib-anstyle.json
target_cli/debug/.fingerprint/anstyle-parse-ed028e81bd9e955d/: lib-anstyle_parse.json
target_cli/debug/.fingerprint/anstyle-query-72cd3965fb3e7262/: lib-anstyle_query  lib-anstyle_query.json
target_cli/debug/.fingerprint/anstyle-wincon-448eba95fe930098/: lib-anstyle_wincon  lib-anstyle_wincon.json
target_cli/debug/.fingerprint/bitflags-d44ff3aa6e6630de/: lib-bitflags  lib-bitflags.json
target_cli/debug/.fingerprint/cfg-if-1882ad8dc550c23a/: lib-cfg_if  lib-cfg_if.json
target_cli/debug/.fingerprint/chrono-c9dc7a9a65f946a7/: lib-chrono  lib-chrono.json
target_cli/debug/.fingerprint/chrono-tz-1ac6794d9b3f4c91/: output-build-script-build-script-build
target_cli/debug/.fingerprint/chrono-tz-build-1e1356b70d8b484c/: lib-chrono_tz_build  lib-chrono_tz_build.json
target_cli/debug/.fingerprint/clap_builder-7eefbc178b749128/: lib-clap_builder  lib-clap_builder.json
target_cli/debug/.fingerprint/clap_lex-649efea7458b69cc/: lib-clap_lex  lib-clap_lex.json
target_cli/debug/.fingerprint/colorchoice-668947b6a499af5e/: lib-colorchoice  lib-colorchoice.json
target_cli/debug/.fingerprint/crossbeam-deque-45b9aa204ce5c2bf/: lib-crossbeam_deque  lib-crossbeam_deque.json
target_cli/debug/.fingerprint/crossbeam-epoch-b4fad90fa70ec1d4/: lib-crossbeam_epoch  lib-crossbeam_epoch.json
target_cli/debug/.fingerprint/crossbeam-utils-5078bb0e9b68e4b3/: build-script-build-script-build
target_cli/debug/.fingerprint/deunicode-64574c7e6ebad3a3/: lib-deunicode  lib-deunicode.json
target_cli/debug/.fingerprint/getrandom-1faab631a02dba06/: lib-getrandom  lib-getrandom.json
target_cli/debug/.fingerprint/globset-44287846468ec812/: output-lib-globset
target_cmd/: .rustc_info.json
templates/: base.md.j2  en.md.j2  es.md.j2  readme_template.md
test/: api_test.ts  render_test.ts  source_code_ast_test.ts
tests/: test_badge_manager.py  test_copyright_generator.py  test_date_utils.py  test_file_handler.py  test_readme_snapshot.py
utils/: file_utils.py  logging_utils.py
(+153 files in other folders)
