[package]
name = "glastor-dev"
version = "0.1.0"
edition = "2021"
description = "README Generator in Rust"
authors = ["GLASTOR <info@glastor.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/glastor-dev/glastor-dev"
homepage = "https://github.com/glastor-dev/glastor-dev"
readme = "README.md"
keywords = ["readme", "generator", "cli", "glastor"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
regex = "1.10"
chrono = "0.4"
colored = "3.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.37", features = ["full"] }
