[project]
name = "readme-generator"
version = "1.0.0"
description = "Professional README generator from JSON data"
authors = [
    {name = "Andrés Antonio Cardoso", email = "glastor.info@gmail.com"},
]
dependencies = [
    "Jinja2>=3.1.6",
    "python-dateutil>=2.8.2",
    "PyYAML>=6.0.1; python_version < '3.13'",
    "PyYAML>=6.0.2; python_version >= '3.13'",
    "typer>=0.9.0; python_version < '3.13'",
    "typer>=0.12.0; python_version >= '3.13'",
    "rich>=13.7.0",
    "pydantic>=2.5.3; python_version < '3.13'",
    "pydantic>=2.10.0; python_version >= '3.13'"
]

[project.scripts]
readme-gen = "src.main:app"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
